# Text-to-SQL-WorkSpace-

./: .gitignore  API_REFERENCE.md  COMPLETION_CHECKLIST.md  GETTING_STARTED.md  IMPLEMENTATION_CHECKLIST.md  LICENSE  Makefile  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  docker-compose.yml  init-db.sql  pyproject.toml  pytest.ini  setup.cfg  setup_check.py
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  requirements.txt
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  optimizer.py  prompt_builder.py  sql_explainer.py  sql_generator.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/db/: __init__.py  connection_manager.py  metadata_service.py  query_executor.py  query_validator.py  transaction_manager.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  chart_service.py  diff_service.py  preview_service.py
backend/app/utils/: __init__.py  logger.py
backend/tests/: conftest.py  test_query_validator.py
frontend/: .env.example  .eslintrc.cjs  .gitignore  FRONTEND_COMPLETE.md  README.md  SETUP.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  endpoints.ts
frontend/src/components/: ChartViewer.tsx  ChatPanel.tsx  ConfirmationModal.tsx  DatabaseConnector.tsx  QueryEditor.tsx  QueryHistory.tsx  ResultTable.tsx  SchemaViewer.tsx
frontend/src/hooks/: useDatabase.ts
frontend/src/pages/: Dashboard.tsx
(+10 files in other folders)
